# mini_robin

./: .gitignore  README.md  pyproject.toml
mini_robin/: bedrock_llm_wrapper.py  configuration.py  file_system.py  hypotheses_generator.py  hypotheses_ranker.py  mini_robin_crew.py  utils.py
mini_robin/config/goal_synthesis_crew/: goal_synthesis_agent.yaml  goal_synthesis_task.yaml
mini_robin/config/hypotheses_generation_crew/: hypotheses_agents.yaml  hypotheses_tasks.yaml
mini_robin/config/ranking_crew/: ranking_agent.yaml  ranking_task.yaml
notebooks/: crow_demo.ipynb
notebooks/robin_output/glaucoma/hypotheses_outputs/: hypotheses.csv  hypotheses.json
notebooks/robin_output/glaucoma/ranker_outputs/: comparison_0.json  comparison_1.json  comparison_2.json  comparison_3.json  comparison_4.json  comparison_5.json  comparison_6.json  comparison_7.json  comparison_8.json  comparison_9.json  final_ranking_output.csv
