[project]
name = "mini_robin"
version = "0.1.0"
description = "AWS Infrastructure Security Audit and Reporting using CrewAI"
authors = [
    {name = "Tony Kipkemboi", email = "tony@crewai.com"},
]
dependencies = [
    "crewai[tools]>=0.16.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}



[tool.poetry]
name = "mini-robin"
version = "0.1.0"
description = ""
authors = ["sarang-26 <65524630+sarang-26@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = "^1.38.37"
loguru = "^0.7.3"
choix = "^0.3.6"
jupyter = "^1.1.1"

[project.scripts]
aws_infrastructure_security_audit_and_reporting = "MiniRobinAssayCrew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
